Add gap analysis script

--- a/revealing_safety_inconsistency/gap_analysis.ipynb
+++ b/revealing_safety_inconsistency/gap_analysis.ipynb
@@ -34,7 +34,7 @@
     "fail_sleep = 2\n",
     "MAX_ERRORS_PER_KEY = 5\n",
     "\n",
-    "# File paths\n",
+    "# Setting input and output files\n",
     "input_file = \"./renellm_random_500.json\"\n",
     "output_file = f\"./renellm_random_500_{model_name.replace('-', '_')}_responses.json\"\n",
     "\n",
