--- a/revealing_safety_inconsistency/gap_analysis.ipynb
+++ b/revealing_safety_inconsistency/gap_analysis.ipynb
@@ -572,7 +572,7 @@
     "        print(df.to_string(index=False))\n",
     "\n",
     "    # Save analysis results\n",
-    "    analysis_file = \"/mnt/dolphinfs/hdd_pool/docker/user/hadoop-aipnlp/EVA/dingpeng/Work_in_2025/proj_sdgo_emnlp_2025/datasets/harm_judgment_analysis.json\"\n",
+    "    analysis_file = \"./harm_judgment_analysis.json\"\n",
     "    with open(analysis_file, 'w', encoding='utf-8') as f:\n",
     "        json.dump({\n",
     "            \"analysis1\": analysis1,\n",
